--- a/src/styles/modules/_variables.scss
+++ b/src/styles/modules/_variables.scss
@@ -2,15 +2,16 @@
 $black:                               #111111;
 $white:                               #ffffff;
 $gray:                                #eeeeee;
+$darkgray:                            #333333;
 $brand-primary:                       #4990E2;
-$text-color:                          $black;
+$text-color:                          $darkgray;
 $text-secondary:                      #7A7A7A;
 
 
 // Typography
-$font-family-base:                    "Helvetica Neue", Helvetica, Arial, sans-serif;
-$headings-font-family:                "Helvetica Neue", Helvetica, Arial, sans-serif;
-$font-size-base:                      16px;
+$font-family-base:                    -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, sans-serif;
+$headings-font-family:                -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, sans-serif;
+$font-size-base:                      14px;
 $line-height-base:                    1.5;
 $headings-font-weight:                500;
 $headings-line-height:                1.1;
